# atmosphere

./: .gitignore  README.md  pyproject.toml  setup.py
atmosphere/: atmosphere.py
src/atmosphere/: atmosphere.py
tests/: README.md
tests/test_atmosphere/: test_atmosphere.py
