[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atmosphere"
version = "0.1.1"
authors = [
  { name="kwan3217", email="kwan3217@gmail.com" },
]
description = "One-dimensional atmosphere model appropriate for aerospace vehicle simulations"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies=[
    "numpy",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/kwan3217/atmosphere/"
Issues = "https://github.com/kwan3217/atmosphere/issues"
